# django-webpack-example

./: README.md  pyproject.toml
src/: pnpm-lock.yaml
src/example/: settings.py  urls.py
